refactor: add board & volunteers as components

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -26,9 +26,36 @@ Bitcoin space. We distribute grants to a wide variety of contributor types
 only to those working on Bitcoin and open-source projects that will improve
 public access to Bitcoin infrastructure.
 
+---
+
+# Board of Directors
+
 We didn't want any one person or small group to have control of the decision
 making process of OpenSats, so we created a transparent, public-facing, and
 accountable nine-person board to make all organizational decisions. OpenSats'
 board members have deep-seated values and will stop at nothing to support and
 ensure the survival of free and open-source technology like Bitcoin.
+
+<Board/>
+
+---
+
+# Operations
+
+Our operations team ensures that OpenSats remains the well-oiled sat-dispensing
+machine that it is today.
+
+
+In addition to the operational team, we have a small but dedicated group of volunteers that are helping the initiative in a variety of ways.
+
+<Volunteers/>
+
+---
+
+# Supporters
+
+We appreciate the massive amount of support we got over the years, both from individuals and from companies, as well from the bitcoin and open-source community at large.
+
+<Credits />
+
 [gf]: /projects/general_fund
