refactor: Board -> BoardMembers

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -36,7 +36,7 @@ accountable nine-person board to make all organizational decisions. OpenSats'
 board members have deep-seated values and will stop at nothing to support and
 ensure the survival of free and open-source technology like Bitcoin.
 
-<Board/>
+<BoardMembers/>
 
 ---
 
