feat: add placeholders for rob and charlie

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -45,6 +45,7 @@ ensure the survival of free and open-source technology like Bitcoin.
 Our operations team ensures that OpenSats remains the well-oiled sat-dispensing
 machine that it is today.
 
+<OpsTeam/>
 
 In addition to the operational team, we have a small but dedicated group of volunteers that are helping the initiative in a variety of ways.
 
