feat: fix gabe copy/paste

--- a/data/authors/gabe.mdx
+++ b/data/authors/gabe.mdx
@@ -1,10 +1,10 @@
 ---
-name: Lucas
-nym: lucas
-avatar: /static/images/volunteers/arvin.jpg
+name: Gabe
+nym: gabe
+avatar: /static/images/volunteers/gabe.jpg
 occupation: Volunteer
 company: OpenSats
-email: lucas@opensats.org
+email: gabe@opensats.org
 nostr: npub1p6tshz5f0vgskx6p8prusfud0ksxl78fwh8tj4s08upcrsq50nfq62ax3q
 volunteer: true
 ---
