--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -47,6 +47,10 @@ machine that it is today.
 
 <OpsTeam/>
 
+---
+
+# Volunteers
+
 In addition to the operational team, we have a small but dedicated group of volunteers that are helping the initiative in a variety of ways.
 
 <Volunteers/>
@@ -57,6 +61,7 @@ In addition to the operational team, we have a small but dedicated group of volu
 
 We appreciate the massive amount of support we got over the years, both from individuals and from companies, as well from the bitcoin and open-source community at large.
 
-<Credits />
+Reach out to `support@opensats.org` if you want to join our growing [list of supporters][support].
 
 [gf]: /projects/general_fund
+[support]: /support
