fix: grammar: remains -> remain

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -118,7 +118,7 @@ been graciously and privately funded.
 Please consider donating to the [OpenSats operational
 fund](/projects/opensats_operations_budget) which will help
 cover our basic operational expenses (which we have kept to a minimum) so we can
-ensure that all donations intended for Bitcoin and FOSS projects remains 100%
+ensure that all donations intended for Bitcoin and FOSS projects remain 100%
 passthrough.
 
 ## Tell me more about your board. How does it work?
