style: Open Sats -> OpenSats

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -30,13 +30,13 @@ impact projects in the Bitcoin space.
 
 We also maintain a list of mission-focused, open-source projects that have been
 vetted by our board members for continuous funding. Donors may recommend their
-gifts be directed to these specific projects; Open Sats will consider these
+gifts be directed to these specific projects; OpenSats will consider these
 recommendations but will retain sole discretion as to how funds are distributed.
 
-## How much of my donation goes towards individuals and projects supported by Open Sats?
+## How much of my donation goes towards individuals and projects supported by OpenSats?
 
 All donations to the general fund and specific, mission-aligned FOSS projects
-are 100% passed through to Open Sats grant recipients. We try our best to find
+are 100% passed through to OpenSats grant recipients. We try our best to find
 donor matching partners that cover the transaction fees that incur with each
 donation, regardless of payment method. Please [reach out] if you want to help
 us cover these costs.
