fix: operational fund -> Operations Budget

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -115,8 +115,8 @@ We are committed to being 100% passthrough for all donations made on our
 platform. To this day our operational, legal, and payment processing fees have
 been graciously and privately funded.
 
-Please consider donating to the [OpenSats operational
-fund](/projects/opensats_operations_budget) which will help
+Please consider donating to the [OpenSats Operations
+Budget](/projects/opensats_operations_budget) which will help
 cover our basic operational expenses (which we have kept to a minimum) so we can
 ensure that all donations intended for Bitcoin and FOSS projects remain 100%
 passthrough.
