--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -51,7 +51,8 @@ machine that it is today.
 
 # Volunteers
 
-In addition to the operational team, we have a small but dedicated group of volunteers that are helping the initiative in a variety of ways.
+In addition to the operational team, we have a small but dedicated group of
+volunteers that are helping the initiative in a variety of ways.
 
 <Volunteers/>
 
@@ -59,7 +60,9 @@ In addition to the operational team, we have a small but dedicated group of volu
 
 # Supporters
 
-We appreciate the massive amount of support we got over the years, both from individuals and from companies, as well from the bitcoin and open-source community at large.
+We appreciate the massive amount of support we got over the years, both from
+individuals and from companies, as well from the bitcoin and open-source
+community at large.
 
 Reach out to `support@opensats.org` if you want to join our growing [list of supporters][support].
 
