feat: add /support text

--- a/data/pages/support.mdx
+++ b/data/pages/support.mdx
@@ -1,16 +1,40 @@
 ---
-title: Support
+title: Support OpenSats
 summary: "TODO"
 image: /static/images/avatar.png
 layout: PageLayout
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id tempor ipsum, sed mollis lorem. Donec vel felis mi. Mauris et urna scelerisque, porta enim et, aliquet diam. Donec ac laoreet tellus, vel consectetur ex. Vestibulum at diam vel quam vulputate vulputate. Duis vehicula malesuada metus, a euismod mi feugiat id. Donec molestie urna eget mauris commodo convallis. Donec maximus tortor quis tortor ullamcorper, at aliquam dolor efficitur. Donec eget laoreet velit, et sollicitudin justo. Donec vitae maximus ex. Nulla a quam id neque elementum tempor quis sed mauris. Phasellus malesuada neque neque, vitae accumsan neque varius eu. Vivamus blandit nisl sed mi pulvinar consequat. Ut eget sagittis diam, id commodo arcu. Ut sit amet pretium mi, et posuere metus. Cras sit amet elementum augue, ut auctor ipsum.
+As stated in our [mission](/mission), OpenSats is a
+501(c)(3) public charity that aims to support and maintain a sustainable
+ecosystem of funding for free and open-source projects and contributors.
 
-Proin ac augue suscipit, finibus sem ac, consequat turpis. Fusce faucibus nunc a ex cursus, ut luctus justo condimentum. Duis in tristique nulla, vel viverra erat. Donec in massa ac tortor tempus rutrum. Praesent condimentum justo ut est placerat viverra. Nam in luctus neque, vel pulvinar sem. Quisque odio augue, sollicitudin placerat pretium non, malesuada nec lectus. Nullam nec finibus diam, eget semper arcu. Phasellus in dui sed lorem efficitur blandit vel vitae nibh. Ut eu hendrerit nibh. Praesent at iaculis ante, sit amet tristique eros. Vestibulum id finibus odio. Cras luctus, arcu ut gravida luctus, odio eros mattis erat, in auctor magna neque at ante. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+As opposed to most other charities, OpenSats does not take a cut from funds
+raised for open-source projects. This means that all donations to the [general
+fund](/projects/general_fund) and specific, mission-aligned
+[FOSS projects](/projects) are 100% passed through to
+OpenSats grant recipients. We try our best to find donor-matching partners that
+cover the transaction fees that are incurred with each donation, regardless of
+payment method. Please [reach out](mailto:support@opensats.org) if you want to
+help us cover these costs.
 
-TODO
+We are committed to being 100% passthrough for all donations made on our
+platform. To this day, our operational, legal, and payment processing fees have
+been graciously and privately funded.
+
+Please consider donating to the [OpenSats Operations
+Budget](/projects/opensats_operations_budget), which helps
+cover our basic operational expenses (which we try to keep to a minimum) so we
+can ensure that all donations intended for Bitcoin and FOSS projects remain 100%
+passthrough.
 
 # Supporters
 
+We got an incredible amount of support over the years, both from individuals and
+companies alike. We love Bitcoin and open-source, and it warms our hearts that
+some members of these communities love us right back.
+
 <Credits />
+
+Want to become a supporter? Let's talk. There are many ways to help:
+support@opensats.org
