feat(support): add DonateToOps button & how you can help

--- a/data/pages/support.mdx
+++ b/data/pages/support.mdx
@@ -22,11 +22,34 @@ We are committed to being 100% passthrough for all donations made on our
 platform. To this day, our operational, legal, and payment processing fees have
 been graciously and privately funded.
 
-Please consider donating to the [OpenSats Operations
-Budget](/projects/opensats_operations_budget), which helps
-cover our basic operational expenses (which we try to keep to a minimum) so we
-can ensure that all donations intended for Bitcoin and FOSS projects remain 100%
-passthrough.
+Please consider donating to our [Operations
+Budget](/projects/opensats_operations_budget), which helps cover our basic
+operational expenses (which we try to keep to a minimum) so we can ensure that
+all donations intended for Bitcoin and FOSS projects remain 100% passthrough.
+
+---
+
+<center>
+  <DonateToOperationsButton />
+</center>
+
+---
+
+# How You Can Help
+
+There are many ways that you can help OpenSats achieve its mission. You can:
+
+- [Donate] to our operations
+- [Volunteer] your time to OpenSats
+- [Spread the word] about OpenSats
+
+Every little bit helps. Thank you for your support!
+
+[Donate]: /projects/opensats_operations_budget
+[Volunteer]: mailto:volunteer@opensats.org
+[Spread the word]: http://njump.me/npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f
+
+---
 
 # Supporters
 
