style: linked email

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -64,7 +64,7 @@ We appreciate the massive amount of support we got over the years, both from
 individuals and from companies, as well from the bitcoin and open-source
 community at large.
 
-Reach out to `support@opensats.org` if you want to join our growing [list of supporters][support].
+Reach out to support@opensats.org if you want to join our growing [list of supporters][support].
 
 [gf]: /projects/general_fund
-[support]: /support
+[support]: /support#supporters
