feat(support): more ways to help

--- a/data/pages/support.mdx
+++ b/data/pages/support.mdx
@@ -35,13 +35,17 @@ all donations intended for Bitcoin and FOSS projects remain 100% passthrough.
 
 ---
 
-# How You Can Help
+# More Ways to Help
 
-There are many ways that you can help OpenSats achieve its mission. You can:
+There are many ways that you can help OpenSats achieve its mission.
 
-- [Donate] to our operations
+You can:
+
+- [Donate] to our Operations Budget
 - [Volunteer] your time to OpenSats
 - [Spread the word] about OpenSats
+- [Donate to specific projects](/projects) or funds
+- [Apply for funding](/apply), if you are working on a mission-aligned project
 
 Every little bit helps. Thank you for your support!
 
@@ -59,5 +63,5 @@ some members of these communities love us right back.
 
 <Credits />
 
-Want to become a supporter? Let's talk. There are many ways to help:
+Want to become a supporter? Let's talk:
 support@opensats.org
