feat: Lucas' bio

--- a/data/authors/lucas.mdx
+++ b/data/authors/lucas.mdx
@@ -9,25 +9,13 @@ nostr: npub176mj8c5pa6pxlmm8syv4uhmz0n8934w0pfnfddgawhycqcue69esr3qzt2
 volunteer: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id tempor
-ipsum, sed mollis lorem. Donec vel felis mi. Mauris et urna scelerisque, porta
-enim et, aliquet diam. Donec ac laoreet tellus, vel consectetur ex. Vestibulum
-at diam vel quam vulputate vulputate. Duis vehicula malesuada metus, a euismod
-mi feugiat id. Donec molestie urna eget mauris commodo convallis. Donec maximus
-tortor quis tortor ullamcorper, at aliquam dolor efficitur. Donec eget laoreet
-velit, et sollicitudin justo. Donec vitae maximus ex. Nulla a quam id neque
-elementum tempor quis sed mauris. Phasellus malesuada neque neque, vitae
-accumsan neque varius eu. Vivamus blandit nisl sed mi pulvinar consequat. Ut
-eget sagittis diam, id commodo arcu. Ut sit amet pretium mi, et posuere metus.
-Cras sit amet elementum augue, ut auctor ipsum.
+Lucas is the co-founder of several small businesses, some of which he is
+managing to this day. His entrepreneurial endeavors over the last 20 years
+spanned multiple countries and continents. As is usually the case with small
+business operators, he knows a little bit of everything and likes to get things
+done.
 
-Proin ac augue suscipit, finibus sem ac, consequat turpis. Fusce faucibus nunc a
-ex cursus, ut luctus justo condimentum. Duis in tristique nulla, vel viverra
-erat. Donec in massa ac tortor tempus rutrum. Praesent condimentum justo ut est
-placerat viverra. Nam in luctus neque, vel pulvinar sem. Quisque odio augue,
-sollicitudin placerat pretium non, malesuada nec lectus. Nullam nec finibus
-diam, eget semper arcu. Phasellus in dui sed lorem efficitur blandit vel vitae
-nibh. Ut eu hendrerit nibh. Praesent at iaculis ante, sit amet tristique eros.
-Vestibulum id finibus odio. Cras luctus, arcu ut gravida luctus, odio eros
-mattis erat, in auctor magna neque at ante. Lorem ipsum dolor sit amet,
-consectetur adipiscing elit.
+Over the last couple of years, he developed a passion for Bitcoin and has been
+studying the orange coin and related freedom tech as intensely as his spare time
+allows. As the first and longest-standing volunteer of OpenSats, he is now
+making a valuable contribution to the Bitcoin and wider open-source ecosystem.
