feat: add Rob's npub and email

--- a/data/authors/robert.mdx
+++ b/data/authors/robert.mdx
@@ -4,6 +4,8 @@ nym: rob
 avatar: /static/images/ops/rob.jpg
 occupation: Operations Manager
 company: OpenSats
+nostr: npub1n3w4uts2r4srq3adqu9trp953dflcnw7ppn72tad4htkpsckwcmqjef6um
+email: rob@opensats.org
 ops: true
 ---
 
