refactor: rename Robert -> Rob

--- a/data/authors/rob.mdx
+++ b/data/authors/rob.mdx
@@ -1,6 +1,6 @@
 ---
-name: Robert
-nym: rob
+name: Rob
+nym: BoltTouring
 avatar: /static/images/ops/rob.jpg
 occupation: Operations Manager
 company: OpenSats
