feat: update Rob's bio

--- a/data/authors/rob.mdx
+++ b/data/authors/rob.mdx
@@ -1,6 +1,6 @@
 ---
 name: Rob
-nym: BoltTouring
+nym: BoltTC
 avatar: /static/images/ops/rob.jpg
 occupation: Operations Manager
 company: OpenSats
@@ -9,25 +9,16 @@ email: rob@opensats.org
 ops: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id tempor
-ipsum, sed mollis lorem. Donec vel felis mi. Mauris et urna scelerisque, porta
-enim et, aliquet diam. Donec ac laoreet tellus, vel consectetur ex. Vestibulum
-at diam vel quam vulputate vulputate. Duis vehicula malesuada metus, a euismod
-mi feugiat id. Donec molestie urna eget mauris commodo convallis. Donec maximus
-tortor quis tortor ullamcorper, at aliquam dolor efficitur. Donec eget laoreet
-velit, et sollicitudin justo. Donec vitae maximus ex. Nulla a quam id neque
-elementum tempor quis sed mauris. Phasellus malesuada neque neque, vitae
-accumsan neque varius eu. Vivamus blandit nisl sed mi pulvinar consequat. Ut
-eget sagittis diam, id commodo arcu. Ut sit amet pretium mi, et posuere metus.
-Cras sit amet elementum augue, ut auctor ipsum.
+Rob believes Bitcoin will continue to transform the world for the better. He
+initially wrote off Bitcoin as he didn't see how it could fulfill the promises
+of the white paper. Once he spent the time to better understand Bitcoin and the
+Lightning network, he couldn't help but go deeper. Rob is an experienced
+software project manager who has led projects across the globe. He hopes that
+his work at OpenSats can help progress the Bitcoin and Nostr ecosystems so that
+more people globally have access to the world's best money and the beauty of
+decentralized communication. With these tools, he believes that we can build
+stronger communities and resist those who wish to control our freedoms.
 
-Proin ac augue suscipit, finibus sem ac, consequat turpis. Fusce faucibus nunc a
-ex cursus, ut luctus justo condimentum. Duis in tristique nulla, vel viverra
-erat. Donec in massa ac tortor tempus rutrum. Praesent condimentum justo ut est
-placerat viverra. Nam in luctus neque, vel pulvinar sem. Quisque odio augue,
-sollicitudin placerat pretium non, malesuada nec lectus. Nullam nec finibus
-diam, eget semper arcu. Phasellus in dui sed lorem efficitur blandit vel vitae
-nibh. Ut eu hendrerit nibh. Praesent at iaculis ante, sit amet tristique eros.
-Vestibulum id finibus odio. Cras luctus, arcu ut gravida luctus, odio eros
-mattis erat, in auctor magna neque at ante. Lorem ipsum dolor sit amet,
-consectetur adipiscing elit.
+Rob loves seeing the world, meeting new people, and reading. When he isn't
+learning about Bitcoin or macroeconomics, he is immersed in Japanese in the
+mountains of Japan.
