feat: update Arvin's bio

--- a/data/authors/arvin.mdx
+++ b/data/authors/arvin.mdx
@@ -5,29 +5,18 @@ avatar: /static/images/volunteers/arvin.jpg
 occupation: Volunteer
 company: OpenSats
 email: arvin@opensats.org
-nostr: npub176mj8c5pa6pxlmm8syv4uhmz0n8934w0pfnfddgawhycqcue69esr3qzt2
+nostr: npub18p66zmyh3q2rgejqencuz6dduuggdn7arg4eqn6x44jerxyy2mys670x7y
 volunteer: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id tempor
-ipsum, sed mollis lorem. Donec vel felis mi. Mauris et urna scelerisque, porta
-enim et, aliquet diam. Donec ac laoreet tellus, vel consectetur ex. Vestibulum
-at diam vel quam vulputate vulputate. Duis vehicula malesuada metus, a euismod
-mi feugiat id. Donec molestie urna eget mauris commodo convallis. Donec maximus
-tortor quis tortor ullamcorper, at aliquam dolor efficitur. Donec eget laoreet
-velit, et sollicitudin justo. Donec vitae maximus ex. Nulla a quam id neque
-elementum tempor quis sed mauris. Phasellus malesuada neque neque, vitae
-accumsan neque varius eu. Vivamus blandit nisl sed mi pulvinar consequat. Ut
-eget sagittis diam, id commodo arcu. Ut sit amet pretium mi, et posuere metus.
-Cras sit amet elementum augue, ut auctor ipsum.
+Arvin's two-decade career in mortgage lending and financial technology
+cultivated a passion for empowering innovation. These experiences ignited his
+interest in combining emerging technologies with traditional systems to improve
+user experiences, driving Arvin to launch a financial technology venture in
+2014, setting new standards in the mortgage industry.
 
-Proin ac augue suscipit, finibus sem ac, consequat turpis. Fusce faucibus nunc a
-ex cursus, ut luctus justo condimentum. Duis in tristique nulla, vel viverra
-erat. Donec in massa ac tortor tempus rutrum. Praesent condimentum justo ut est
-placerat viverra. Nam in luctus neque, vel pulvinar sem. Quisque odio augue,
-sollicitudin placerat pretium non, malesuada nec lectus. Nullam nec finibus
-diam, eget semper arcu. Phasellus in dui sed lorem efficitur blandit vel vitae
-nibh. Ut eu hendrerit nibh. Praesent at iaculis ante, sit amet tristique eros.
-Vestibulum id finibus odio. Cras luctus, arcu ut gravida luctus, odio eros
-mattis erat, in auctor magna neque at ante. Lorem ipsum dolor sit amet,
-consectetur adipiscing elit.
+At his essence, Arvin is captivated by the transformative capabilities of
+Bitcoin and Nostr, viewing them as pivotal equalizers that are unlocking
+boundless human potential. Arvin devotes his time to volunteering at OpenSats,
+contributing towards a future where free and open-source software and protocols
+enable a more honest, equitable, and interconnected society.
