feat(about): add Arvin's github

--- a/data/authors/arvin.mdx
+++ b/data/authors/arvin.mdx
@@ -6,6 +6,7 @@ occupation: Volunteer
 company: OpenSats
 email: arvin@opensats.org
 nostr: npub18p66zmyh3q2rgejqencuz6dduuggdn7arg4eqn6x44jerxyy2mys670x7y
+github: https://github.com/Arvin21M
 volunteer: true
 ---
 
