--- a/data/authors/charles.mdx
+++ b/data/authors/charles.mdx
@@ -7,25 +7,20 @@ company: OpenSats
 ops: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id tempor
-ipsum, sed mollis lorem. Donec vel felis mi. Mauris et urna scelerisque, porta
-enim et, aliquet diam. Donec ac laoreet tellus, vel consectetur ex. Vestibulum
-at diam vel quam vulputate vulputate. Duis vehicula malesuada metus, a euismod
-mi feugiat id. Donec molestie urna eget mauris commodo convallis. Donec maximus
-tortor quis tortor ullamcorper, at aliquam dolor efficitur. Donec eget laoreet
-velit, et sollicitudin justo. Donec vitae maximus ex. Nulla a quam id neque
-elementum tempor quis sed mauris. Phasellus malesuada neque neque, vitae
-accumsan neque varius eu. Vivamus blandit nisl sed mi pulvinar consequat. Ut
-eget sagittis diam, id commodo arcu. Ut sit amet pretium mi, et posuere metus.
-Cras sit amet elementum augue, ut auctor ipsum.
+Charles might strike the uninitiated as a very boring man. As the son of an
+accountant and a librarian turned bureaucrat, he grew up immersed in a world of
+spreadsheets and paper-pushing. But he is not a boring man. He has a very
+particular set of skills; skills he has acquired over a very long career. Skills
+that make him effective at navigating the nightmare of bureaucracy.
 
-Proin ac augue suscipit, finibus sem ac, consequat turpis. Fusce faucibus nunc a
-ex cursus, ut luctus justo condimentum. Duis in tristique nulla, vel viverra
-erat. Donec in massa ac tortor tempus rutrum. Praesent condimentum justo ut est
-placerat viverra. Nam in luctus neque, vel pulvinar sem. Quisque odio augue,
-sollicitudin placerat pretium non, malesuada nec lectus. Nullam nec finibus
-diam, eget semper arcu. Phasellus in dui sed lorem efficitur blandit vel vitae
-nibh. Ut eu hendrerit nibh. Praesent at iaculis ante, sit amet tristique eros.
-Vestibulum id finibus odio. Cras luctus, arcu ut gravida luctus, odio eros
-mattis erat, in auctor magna neque at ante. Lorem ipsum dolor sit amet,
-consectetur adipiscing elit.
+As Chief Fiat Officer, Charles takes care of—surprise, surprise—the "fiat" side
+of the initiative. He is currently sitting in an undisclosed location pushing
+papers from the left side of his desk to the right side of his desk, while also
+pushing Bitcoin and freedom-tech forward by providing his fiat expertise to
+OpenSats.
+
+He is a professional when it comes to navigating the old world; the world that
+honors hand-written signatures over cryptographic ones; the world that accepts
+documents only if they are faxed via an ancient, government-approved machine. We
+are working towards making that world obsolete; but until we do, organizations
+like us need people like Charles.
