feat: add cfunk's npub

--- a/data/authors/cfunk.mdx
+++ b/data/authors/cfunk.mdx
@@ -5,7 +5,7 @@ avatar: /static/images/volunteers/cfunk.jpg
 occupation: Volunteer
 company: OpenSats
 email: cfunk@opensats.org
-nostr: TODO
+nostr: npub1cfunkt32sd6pjavpkjpyf3rrjt3f7yp34pkp2da9f002h8gc27uqfpq8v7
 volunteer: true
 ---
 
