--- a/data/authors/gabe.mdx
+++ b/data/authors/gabe.mdx
@@ -9,25 +9,8 @@ nostr: npub1p6tshz5f0vgskx6p8prusfud0ksxl78fwh8tj4s08upcrsq50nfq62ax3q
 volunteer: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id tempor
-ipsum, sed mollis lorem. Donec vel felis mi. Mauris et urna scelerisque, porta
-enim et, aliquet diam. Donec ac laoreet tellus, vel consectetur ex. Vestibulum
-at diam vel quam vulputate vulputate. Duis vehicula malesuada metus, a euismod
-mi feugiat id. Donec molestie urna eget mauris commodo convallis. Donec maximus
-tortor quis tortor ullamcorper, at aliquam dolor efficitur. Donec eget laoreet
-velit, et sollicitudin justo. Donec vitae maximus ex. Nulla a quam id neque
-elementum tempor quis sed mauris. Phasellus malesuada neque neque, vitae
-accumsan neque varius eu. Vivamus blandit nisl sed mi pulvinar consequat. Ut
-eget sagittis diam, id commodo arcu. Ut sit amet pretium mi, et posuere metus.
-Cras sit amet elementum augue, ut auctor ipsum.
-
-Proin ac augue suscipit, finibus sem ac, consequat turpis. Fusce faucibus nunc a
-ex cursus, ut luctus justo condimentum. Duis in tristique nulla, vel viverra
-erat. Donec in massa ac tortor tempus rutrum. Praesent condimentum justo ut est
-placerat viverra. Nam in luctus neque, vel pulvinar sem. Quisque odio augue,
-sollicitudin placerat pretium non, malesuada nec lectus. Nullam nec finibus
-diam, eget semper arcu. Phasellus in dui sed lorem efficitur blandit vel vitae
-nibh. Ut eu hendrerit nibh. Praesent at iaculis ante, sit amet tristique eros.
-Vestibulum id finibus odio. Cras luctus, arcu ut gravida luctus, odio eros
-mattis erat, in auctor magna neque at ante. Lorem ipsum dolor sit amet,
-consectetur adipiscing elit.
+Gabe works as an analyst in the healthcare industry and spends most of his time
+working with hospital foundations. He first became interested in OpenSats when
+he realized that sometimes the best thing you can do is to help those who are
+experts at what they do. Gabe believes in the future of Bitcoin and Nostr and
+wants to help developers and contributors to make that future a reality.
