feat: add Jason's bio

--- a/data/authors/jason.mdx
+++ b/data/authors/jason.mdx
@@ -9,25 +9,20 @@ nostr: TODO
 volunteer: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id tempor
-ipsum, sed mollis lorem. Donec vel felis mi. Mauris et urna scelerisque, porta
-enim et, aliquet diam. Donec ac laoreet tellus, vel consectetur ex. Vestibulum
-at diam vel quam vulputate vulputate. Duis vehicula malesuada metus, a euismod
-mi feugiat id. Donec molestie urna eget mauris commodo convallis. Donec maximus
-tortor quis tortor ullamcorper, at aliquam dolor efficitur. Donec eget laoreet
-velit, et sollicitudin justo. Donec vitae maximus ex. Nulla a quam id neque
-elementum tempor quis sed mauris. Phasellus malesuada neque neque, vitae
-accumsan neque varius eu. Vivamus blandit nisl sed mi pulvinar consequat. Ut
-eget sagittis diam, id commodo arcu. Ut sit amet pretium mi, et posuere metus.
-Cras sit amet elementum augue, ut auctor ipsum.
+Jason, like the characters in _The Matrix_, felt from an early age there was
+something wrong with the world.
 
-Proin ac augue suscipit, finibus sem ac, consequat turpis. Fusce faucibus nunc a
-ex cursus, ut luctus justo condimentum. Duis in tristique nulla, vel viverra
-erat. Donec in massa ac tortor tempus rutrum. Praesent condimentum justo ut est
-placerat viverra. Nam in luctus neque, vel pulvinar sem. Quisque odio augue,
-sollicitudin placerat pretium non, malesuada nec lectus. Nullam nec finibus
-diam, eget semper arcu. Phasellus in dui sed lorem efficitur blandit vel vitae
-nibh. Ut eu hendrerit nibh. Praesent at iaculis ante, sit amet tristique eros.
-Vestibulum id finibus odio. Cras luctus, arcu ut gravida luctus, odio eros
-mattis erat, in auctor magna neque at ante. Lorem ipsum dolor sit amet,
-consectetur adipiscing elit.
+In a journey characterized by a grounding in natural/experimental science, a
+curiosity in economics driven by the financial crisis of 2007-8, a career in
+government and the private sector as a Ph.D. applied microeconomist, he finally
+discovered Austrian economics and Bitcoin.
+
+Unable to unsee the horrors of the fiat system (which he had been captured by
+during his years in academia, government, and more generally as a mainstream
+economist), he departed his fiat career to spend time on more worthy pursuits.
+An avid user and supporter of FOSS, he happily dedicates his time now to his
+family, Bitcoin, freedom and free speech, and FOSS through OpenSats.
+
+He also does what he can to add a little more structure and beauty to the world
+by playing Bach and Mozart on the violin (in addition to running his Bitcoin
+node, of course).
