chore: apply suggestions from code review
Co-authored-by: Lucas <81401034+lucasmogu@users.noreply.github.com>

--- a/data/authors/lucas.mdx
+++ b/data/authors/lucas.mdx
@@ -15,7 +15,7 @@ spanned multiple countries and continents. As is usually the case with small
 business operators, he knows a little bit of everything and likes to get things
 done.
 
-Over the last couple of years, he developed a passion for Bitcoin and has been
+Because of his first-hand experience with hyperinflation and running businesses in extremely volatile economic and political environments, he developed a passion for Bitcoin and has been
 studying the orange coin and related freedom tech as intensely as his spare time
 allows. As the first and longest-standing volunteer of OpenSats, he is now
 making a valuable contribution to the Bitcoin and wider open-source ecosystem.
