--- a/data/authors/rob.mdx
+++ b/data/authors/rob.mdx
@@ -20,5 +20,5 @@ decentralized communication. With these tools, he believes that we can build
 stronger communities and resist those who wish to control our freedoms.
 
 Rob loves seeing the world, meeting new people, and reading. When he isn't
-learning about Bitcoin or macroeconomics, he is immersed in Japanese in the
+learning about Bitcoin or macroeconomics, he is immersed in learning Japanese in the
 mountains of Japan.
