feat: /support summary

--- a/data/pages/support.mdx
+++ b/data/pages/support.mdx
@@ -1,6 +1,6 @@
 ---
 title: Support OpenSats
-summary: "TODO"
+summary: "Help us to provide sustainable funding for free and open-source projects."
 image: /static/images/avatar.png
 layout: PageLayout
 ---
