feat: add Jason's npub

--- a/data/authors/jason.mdx
+++ b/data/authors/jason.mdx
@@ -5,7 +5,7 @@ avatar: /static/images/volunteers/jason.jpg
 occupation: Volunteer
 company: OpenSats
 email: jason@opensats.org
-nostr: TODO
+nostr: npub1eea85mad6p7lyg0m0megw7v0k84u844evmav762v2masqrcyew4qn0d45v
 volunteer: true
 ---
 
