Update 'about' page link

--- a/data/projects/opensats_operations_budget.mdx
+++ b/data/projects/opensats_operations_budget.mdx
@@ -15,4 +15,4 @@ bonusUSD: 330000
 
 ## About this project
 
-Open Sats Initiative, Inc., is a 501(c)(3) non-profit corporation (EIN: 863904387) helping to support and maintain a sustainable ecosystem of funding for Bitcoin & complimentary-FOSS projects and contributors. Head over to the About Us page to learn more about the organization and our efforts!
+Open Sats Initiative, Inc., is a 501(c)(3) non-profit corporation (EIN: 863904387) helping to support and maintain a sustainable ecosystem of funding for Bitcoin & complimentary-FOSS projects and contributors. Head over to the [About Us](https://opensats.org/about) page to learn more about the organization and our efforts!
