Update 'about' page link and description of OpenSats Operational Budget Page (#169)

--- a/data/projects/opensats_operations_budget.mdx
+++ b/data/projects/opensats_operations_budget.mdx
@@ -15,4 +15,4 @@ bonusUSD: 330000
 
 ## About this project
 
-Open Sats Initiative, Inc., is a 501(c)(3) non-profit corporation (EIN: 863904387) helping to support and maintain a sustainable ecosystem of funding for Bitcoin & complimentary-FOSS projects and contributors. Head over to the About Us page to learn more about the organization and our efforts!
+Open Sats Initiative, Inc., is a 501(c)(3) non-profit corporation (EIN: 863904387) helping to support and maintain a sustainable ecosystem of funding for Bitcoin & complimentary-FOSS projects and contributors. Unlike most charities, OpenSats doesn't take a cut of any donations to FOSS projects that we list in order to fund our operational expenses, instead opting to pass 100% of donations through to the projects themselves. This means that our (very small) operational budget is 100% funded from generous donors like you who appreciate our hard work to support free and open source projects in the Bitcoin space. You can donate to our operational budget by clicking the "Donate" button on this page or head over to the [About Us](https://opensats.org/about) page to learn more about the organization and our efforts!
