feat: add Dez again, fuck it

--- a/data/authors/dez.mdx
+++ b/data/authors/dez.mdx
@@ -9,6 +9,11 @@ nostr: npub1lwwszsyje89zaww8g8rqyzzjzm25lkzeqv4qsfmhpgazke5xxx5q7p62z6
 volunteer: true
 ---
 
+Dez is probably on a boat somewhere, which is why he is unable to provide a
+meaningful bio at the moment. If he is not doing Navy stuff he is helping
+OpenSats with recruitment and other things.
+
+Please enjoy a paragraph of "lorem ipsum" until Dez returns from the high seas:
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam id tempor
 ipsum, sed mollis lorem. Donec vel felis mi. Mauris et urna scelerisque, porta
 enim et, aliquet diam. Donec ac laoreet tellus, vel consectetur ex. Vestibulum
@@ -20,14 +25,3 @@ elementum tempor quis sed mauris. Phasellus malesuada neque neque, vitae
 accumsan neque varius eu. Vivamus blandit nisl sed mi pulvinar consequat. Ut
 eget sagittis diam, id commodo arcu. Ut sit amet pretium mi, et posuere metus.
 Cras sit amet elementum augue, ut auctor ipsum.
-
-Proin ac augue suscipit, finibus sem ac, consequat turpis. Fusce faucibus nunc a
-ex cursus, ut luctus justo condimentum. Duis in tristique nulla, vel viverra
-erat. Donec in massa ac tortor tempus rutrum. Praesent condimentum justo ut est
-placerat viverra. Nam in luctus neque, vel pulvinar sem. Quisque odio augue,
-sollicitudin placerat pretium non, malesuada nec lectus. Nullam nec finibus
-diam, eget semper arcu. Phasellus in dui sed lorem efficitur blandit vel vitae
-nibh. Ut eu hendrerit nibh. Praesent at iaculis ante, sit amet tristique eros.
-Vestibulum id finibus odio. Cras luctus, arcu ut gravida luctus, odio eros
-mattis erat, in auctor magna neque at ante. Lorem ipsum dolor sit amet,
-consectetur adipiscing elit.
