Apply suggestions from code review
Co-authored-by: abitcoinperson <ben@opensats.org>

--- a/data/pages/support.mdx
+++ b/data/pages/support.mdx
@@ -16,7 +16,7 @@ fund](/projects/general_fund) and specific, mission-aligned
 OpenSats grant recipients. We try our best to find donor-matching partners that
 cover the transaction fees that are incurred with each donation, regardless of
 payment method. Please [reach out](mailto:support@opensats.org) if you want to
-help us cover these costs.
+help us cover these costs. We are actively looking for organizations / sponsors who would be excited to help cover processing fees (~3%) for donations via credit/debit cards and/or on-chain / routing fees for donations via the bitcoin and lightning networks.
 
 We are committed to being 100% passthrough for all donations made on our
 platform. To this day, our operational, legal, and payment processing fees have
