feat(ops): add call to action

--- a/data/authors/rob.mdx
+++ b/data/authors/rob.mdx
@@ -22,3 +22,13 @@ stronger communities and resist those who wish to control our freedoms.
 Rob loves seeing the world, meeting new people, and reading. When he isn't
 learning about Bitcoin or macroeconomics, he is immersed in learning Japanese in the
 mountains of Japan.
+
+---
+
+Please consider donating to our [Operations
+Budget](/projects/opensats_operations_budget) to help cover our operational
+expenses.
+
+<center>
+  <DonateToOperationsButton />
+</center>
