--- a/data/authors/charles.mdx
+++ b/data/authors/charles.mdx
@@ -24,3 +24,13 @@ honors hand-written signatures over cryptographic ones; the world that accepts
 documents only if they are faxed via an ancient, government-approved machine. We
 are working towards making that world obsolete; but until we do, organizations
 like us need people like Charles.
+
+---
+
+Please consider donating to our [Operations
+Budget](/projects/opensats_operations_budget) to help cover our operational
+expenses.
+
+<center>
+  <DonateToOperationsButton />
+</center>
