--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -45,7 +45,7 @@ ensure the survival of free and open-source technology like Bitcoin.
 Our operations team ensures that OpenSats remains the well-oiled sat-dispensing
 machine that it is today.
 
-Unlike most charities, OpenSats doesn't take a percentage of any donations for our operational budget. This means that our small operation budget is funded from donors like you. If you'd like to contribute specifically to the operations budget which helps OpenSats function and support other FOSS projects and contributors in the space, please consider donating to our [Operations Budget](https://opensats.org/projects/opensats_operations_budget)
+Unlike most charities, OpenSats doesn't take a percentage of any donations for our operational budget. This means that our small operation budget is funded from donors like you. If you'd like to contribute specifically to the operations budget which helps OpenSats function and support other FOSS projects and contributors in the space, please consider donating to our [Operations Budget](https://opensats.org/projects/opensats_operations_budget).
 
 <OpsTeam/>
 
