--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -16,8 +16,8 @@ education and research initiatives.
 We want to see contributors to Bitcoin and FOSS (free and open-source) tools
 supported by a sustainable ecosystem and consistent funding, so we set up a
 platform to do just that. Donors can come to the OpenSats web platform and
-either recommend gifts to specific project areas or contribute to our general
-fund.
+either recommend gifts to [specific projects](/projects) or contribute to our
+[general fund][gf].
 
 Grants are distributed quarterly by our board. We evaluate and assess
 applications to make sure any grants are awarded to high impact projects in the
@@ -26,8 +26,52 @@ Bitcoin space. We distribute grants to a wide variety of contributor types
 only to those working on Bitcoin and open-source projects that will improve
 public access to Bitcoin infrastructure.
 
+---
+
+# Board of Directors
+
 We didn't want any one person or small group to have control of the decision
 making process of OpenSats, so we created a transparent, public-facing, and
 accountable nine-person board to make all organizational decisions. OpenSats'
 board members have deep-seated values and will stop at nothing to support and
 ensure the survival of free and open-source technology like Bitcoin.
+
+<BoardMembers/>
+
+---
+
+# Operations
+
+Our operations team ensures that OpenSats remains the well-oiled sat-dispensing
+machine that it is today.
+
+Unlike most charities, OpenSats doesn't take a percentage of any donations for
+our operational budget. This means that our small operation budget is funded
+from donors like you. If you'd like to contribute specifically to the operations
+budget which helps OpenSats function and support other FOSS projects and
+contributors in the space, please consider donating to our [Operations
+Budget](https://opensats.org/projects/opensats_operations_budget).
+
+<OpsTeam/>
+
+---
+
+# Volunteers
+
+In addition to the operational team, we have a small but dedicated group of
+volunteers that are helping the initiative in a variety of ways.
+
+<Volunteers/>
+
+---
+
+# Supporters
+
+We appreciate the massive amount of support we got over the years, both from
+individuals and from companies, as well from the bitcoin and open-source
+community at large.
+
+Reach out to support@opensats.org if you want to join our growing [list of supporters][support].
+
+[gf]: /projects/general_fund
+[support]: /support#supporters
