--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -30,13 +30,13 @@ impact projects in the Bitcoin space.
 
 We also maintain a list of mission-focused, open-source projects that have been
 vetted by our board members for continuous funding. Donors may recommend their
-gifts be directed to these specific projects; Open Sats will consider these
+gifts be directed to these specific projects; OpenSats will consider these
 recommendations but will retain sole discretion as to how funds are distributed.
 
-## How much of my donation goes towards individuals and projects supported by Open Sats?
+## How much of my donation goes towards individuals and projects supported by OpenSats?
 
 All donations to the general fund and specific, mission-aligned FOSS projects
-are 100% passed through to Open Sats grant recipients. We try our best to find
+are 100% passed through to OpenSats grant recipients. We try our best to find
 donor matching partners that cover the transaction fees that incur with each
 donation, regardless of payment method. Please [reach out] if you want to help
 us cover these costs.
@@ -115,10 +115,10 @@ We are committed to being 100% passthrough for all donations made on our
 platform. To this day our operational, legal, and payment processing fees have
 been graciously and privately funded.
 
-Please consider donating to the [OpenSats operational
-fund](/projects/opensats_operations_budget) which will help
+Please consider donating to the [OpenSats Operations
+Budget](/projects/opensats_operations_budget) which will help
 cover our basic operational expenses (which we have kept to a minimum) so we can
-ensure that all donations intended for Bitcoin and FOSS projects remains 100%
+ensure that all donations intended for Bitcoin and FOSS projects remain 100%
 passthrough.
 
 ## Tell me more about your board. How does it work?
