fix(about): Addison's GitHub link

--- a/data/authors/addison.mdx
+++ b/data/authors/addison.mdx
@@ -6,7 +6,7 @@ occupation: Volunteer
 company: OpenSats
 email: addison@opensats.org
 nostr: npub1d9vusz3zdd3cp2nqfdhqv932a2e20nvkhnkngjmjepzs0fr72s2qdlzk2u
-github: https://github.com/Arvin21M
+github: https://github.com/bitcoinprecept
 volunteer: true
 ---
 
